# intelligent-ops-platform

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  app.py  config.py  docker-compose.prod.yml  docker-compose.yml  extensions.py  gunicorn.conf.py  middleware.py  pyproject.toml  requirements-dev.txt  requirements.txt  schemas.py  seed.py  tasks.py
.github/workflows/: ci.yml
adapters/: __init__.py  llm_backend.py  rpa_backend.py
docs/superpowers/specs/: 2026-07-10-sqlglot-replace-design.md
migrations/versions/: 4e06934ab2d0_initial_schema.py
models/: __init__.py  aigc.py  erp.py  external.py  system.py  warehouse.py
nginx/: .gitignore  gen-self-signed-cert.sh
nginx/conf.d/: app.conf
routes/: __init__.py  aigc.py  audit.py  auth.py  erp.py  fde.py  loop.py  rpa.py
scripts/: Dockerfile.backup  backup-cron-entrypoint.sh  backup_db.sh  restore_db.sh
services/: __init__.py  aigc_service.py  anomaly_detector.py  auth.py  closed_loop.py  data_agent.py  erp_service.py  evaluator.py  idempotency.py  multiagent.py  notifier.py  password_policy.py  rbac.py  rpa_service.py  warehouse_service.py
static/css/: style.css
static/js/: app.js
templates/: index.html
tests/: conftest.py  test_anomaly_detector.py  test_auth.py  test_daily_report.py  test_data_agent.py  test_evaluator.py  test_health.py  test_multiagent.py
tests/fixtures/: gold_sql.json
